2003-02-17  Lamar Owen <lamar.owen@wgcr.org>

	* tagged and released 4.0beta1

2003-01-09  Lamar Owen <lamar.owen@wgcr.org>
	
	* nspostgres.h: changed include order and conditionals for
	AOLserver 4 use.

2002-12-23  Lamar Owen <lamar.owen@wgcr.org>

	* nspostgres release 3.5 Official

2002-12-18  Lamar Owen <lamar.owen@wgcr.org>

	* nspostgres.h and nspostgres.c: corrected some misinformation
	in the comments.

	* nspostgres.h: ChangeLog not in comments anymore; neither is the
	contributor list.

	* corrected contributor list in README.

2002-12-13  Scott S. Goodwin  <scott@scottg.net>

	* Makefile: Added targets for tagging and file release. Do a 'make
	help' to see it.

	* OVERWRITE: I have taken the latest OpenACS version of their postgres
	module and overwritten the "pre-don" version. Had to take postgres.c
	and split it into nspostgres.c and .h. Updated nspostgres Makefile to
	allow compiling with the ACS flag, and to allow setting POSTGRES var
	to "LSB" which will cause the module to look for PostgreSQL libraries
	in the standard Linux locations. Lamar Owen is now primary maintainer
	of this code.

2002-09-29  Scott Goodwin  <scott@scottg.net>

	* STARTING OVER: I'm tagging the nspostgres tree as "pre-don". Don
	Baccus is going to be checking out the tree and either working
	with what I've done here, or replacing it all with the current
	version of the OpenACS postgres module. The name of the module
	will stay nspostgres.

2002-07-01  Scott S. Goodwin  <scott@scottg.net>

	* all: reset file perms to 0644 for all files except the CVS
	directory.

2002-06-02  Scott S. Goodwin  <scott@scottg.net>

	* nspostgres.c: Incorporated latest patches from the postgres
	module that the OpenACS team maintains.

	* TODO: Removed this file.

2001-12-13  Scott S. Goodwin  <scott@scottg.net>

	* TODO: added this file.

2001-12-03  Scott S. Goodwin  <scott@scottg.net>

	* nspostgres.c: Cleaned up the code comments to conform to